syntax = "proto3";
import "common/loan.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "LoansWriteMicroservice";

package LoansMicroservice;

service LoansWrite {
  rpc BatchRepayInstalments (BatchRepayInstalmentsRequest) returns (google.protobuf.Empty);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message BatchRepayInstalmentsRequest {
  repeated string ids = 1;
}

message SetupRequest {
  repeated Loan loans = 1;
}