syntax = "proto3";
import "common/payment.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "PaymentsWriteMicroservice";

package PaymentsWriteMicroservice;

service PaymentsWrite {
  rpc Create (CreatePaymentRequest) returns (CreatePaymentResult);
  rpc Cancel (CancelPaymentsRequest) returns (google.protobuf.Empty);
  rpc UpdateRepayTimestamp (UpdateRepayTimestampRequest) returns (google.protobuf.Empty);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message CreatePaymentRequest {
  string flowId = 1;
  float amount = 2;
  int64 startTimestamp = 3;
  int64 interval = 4;
  string accountId = 5;
  string recipient = 6;
}

message UpdateRepayTimestampRequest {
  string flowId = 1;
  repeated string ids = 2;
  int64 repayTimestamp = 3;
}

message CreatePaymentResult {
  Payment payment = 1;
}

message CancelPaymentsRequest {
  string flowId = 1;
  repeated string ids = 2;
}

message SetupRequest {
  repeated Payment payments = 1;
}